--- a/health_conf/nvidia_smi.conf
+++ b/health_conf/nvidia_smi.conf
@@ -1,11 +1,23 @@
-template: 30s_gpu_usage
+template: 1min_gpu_usage
       on: nvidia_smi.gpu_utilization
       os: linux
    hosts: *
   lookup: average -30s
    every: 10s
-    warn: $this > (($status >= $WARNING)  ? (80) : (90))
-    crit: $this > (($status == $CRITICAL) ? (90) : (100))
+    warn: $this > (($status >= $WARNING)  ? (70) : (80))
+    crit: $this > (($status == $CRITICAL) ? (90) : (95))
    delay: down 1m multiplier 1.5 max 1h
-    info: average gpu utilization for the last 30s
+    info: average gpu utilization for the last 1 minutes
+      to: sysadmin
+
+template: 10s_gpu_temp
+      on: nvidia_smi.temperature
+      os: linux
+   hosts: *
+  lookup: average -10s
+   every: 10s
+    warn: $this > (($status >= $WARNING)  ? (65) : (70))
+    crit: $this > (($status == $CRITICAL) ? (75) : (80))
+   delay: down 1m multiplier 1.5 max 1h
+    info: average gpu temperature for the last 10s
       to: sysadmin
