enable database engine

--- a/files/netdata.conf
+++ b/files/netdata.conf
@@ -22,6 +22,9 @@
 	# memory mode = save
 	# page cache size = 32
 	# dbengine disk space = 256
+        memory mode = dbengine
+        page cache size = 64
+        dbengine disk space = 1024
 	# memory deduplication (ksm) = yes
 	# TZ environment variable = :/etc/localtime
 	# timezone = Etc/UTC
